# quaerit-machina

./: Cargo.toml  LICENSE-MIT  README.md
examples/: crawl.rs
examples/crawl/: crawl.rs  rm_to_om.rs
src/: agent.rs  convert.rs  crawl_progress.rs  curiosity.rs  delegation_rules.rs  lib.rs  lookup.rs  main.rs  rdf_graph.rs  store.rs  translate.rs  ttl.rs  types.rs  util.rs
src/crdf/: ipfs_client_resolver.rs  ipfs_resolver.rs  main.rs  parse.rs  resolve.rs
