[package]
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
name = "quaerit-machina"
version = "0.1.0"

[dependencies]
rand = "0.8.2"
rio_api = "0.5.1"
rio_turtle = "0.5.1"
tap = "1.0.0"

[dependencies.oxigraph]
git = "https://github.com/docknetwork/oxigraph.git"
path = "../oxigraph"
version = "0.2.1"

[dependencies.rify]
path = "../rify"
version = "0.5.1"

[dependencies.serde]
features = ["derive"]
version = "1"
