[package]
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
name = "quaerit-machina"
version = "0.1.0"

[dependencies]
rand = "0.8.2"
rio_api = "0.5.1"
rio_turtle = "0.5.1"
tap = "1.0.0"
oxigraph = "0.2.1"
async-trait = "0.1.42"
futures-lite = "1.11.3"

[dependencies.serde]
features = ["derive"]
version = "1"

[[example]]
name = "crawl"
path = "examples/crawl.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
