[package]
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"
name = "quaerit-machina"
version = "0.1.0"

[[bin]]
name = "crdf"
path = "src/crdf/main.rs"

[dependencies]
rand = "0.8.2"
rio_api = "0.5.1"
rio_turtle = "0.5.1"
tap = "1.0.0"
oxigraph = "0.2.1"
async-trait = "0.1.42"
futures-lite = "1.11.3"
structopt = "0.3.21"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ipfs-api = "0.10.0"
ipfs = "0.2.1"
futures = "0.3"

[dependencies.serde]
features = ["derive"]
version = "1"

[[example]]
name = "crawl"
path = "examples/crawl/crawl.rs"
